--- a/app/src/main/res/layouts/widgets/layout/widget_picker_preview.xml
+++ b/app/src/main/res/layouts/widgets/layout/widget_picker_preview.xml
@@ -28,7 +28,7 @@
             android:baselineAligned="false"
             android:elevation="1px"
             android:orientation="horizontal"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
