--- a/app/src/main/res/layouts/settings/dialogs/layout/hidden_item.xml
+++ b/app/src/main/res/layouts/settings/dialogs/layout/hidden_item.xml
@@ -29,9 +29,10 @@
             android:ellipsize="end"
             android:fontFamily="@font/dm_sans_medium"
             android:lines="1"
+            android:letterSpacing="-0.03"
             android:maxLines="1"
             android:textColor="?attr/colorOnSurface"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/category"
