--- a/app/src/main/res/layouts/settings/dialogs/layout/engine_item.xml
+++ b/app/src/main/res/layouts/settings/dialogs/layout/engine_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<carbon.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp"
+    android:background="@drawable/ripple"
     android:forceDarkAllowed="false"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:padding="20dp"
+    app:carbon_cornerRadius="10dp">
 
     <ImageView
         android:id="@+id/icon"
@@ -19,16 +19,17 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
 
         <TextView
             android:id="@+id/label"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/dm_sans_medium"
-            android:textColor="?attr/colorOnSurface"
+            android:fontFamily="@font/dm_sans_regular"
             android:letterSpacing="-0.03"
+            android:textColor="?attr/colorOnSurface"
             android:textSize="20sp" />
 
         <TextView
@@ -42,4 +43,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</carbon.widget.LinearLayout>
