--- a/app/src/main/res/layouts/settings/dialogs/layout/icon_item.xml
+++ b/app/src/main/res/layouts/settings/dialogs/layout/icon_item.xml
@@ -1,32 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<carbon.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp"
+    android:background="@drawable/ripple"
     android:forceDarkAllowed="false"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:padding="16dp"
+    app:carbon_cornerRadius="10dp">
 
     <com.stario.launcher.ui.icons.AdaptiveIconView
         android:id="@+id/icon"
         android:layout_width="50dp"
         android:layout_height="50dp" />
 
-    <TextView
-        android:id="@+id/label"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:fontFamily="@font/dm_sans_medium"
-        android:lines="1"
-        android:maxLines="1"
-        android:letterSpacing="-0.03"
+        android:orientation="vertical"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:textColor="?attr/colorOnSurface"
-        android:textSize="20sp" />
+        android:paddingRight="20dp">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="@font/dm_sans_regular"
+            android:letterSpacing="-0.03"
+            android:lines="1"
+            android:maxLines="1"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/count"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:alpha="0.7"
+            android:ellipsize="end"
+            android:fontFamily="@font/dm_sans_regular"
+            android:lines="1"
+            android:maxLines="1"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
+</carbon.widget.LinearLayout>
