--- a/app/src/main/res/layouts/settings/dialogs/layout/pop_up_icons.xml
+++ b/app/src/main/res/layouts/settings/dialogs/layout/pop_up_icons.xml
@@ -1,122 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.bosphere.fadingedgelayout.FadingEdgeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal">
+    app:fel_edge="top|bottom"
+    app:fel_size_bottom="20dp"
+    app:fel_size_top="20dp">
 
-    <carbon.widget.LinearLayout
-        android:id="@+id/content"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_sheet"
-        android:forceDarkAllowed="false"
-        android:orientation="vertical"
-        app:carbon_maxWidth="500dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <carbon.widget.ConstraintLayout
-                android:layout_width="40dp"
-                android:layout_height="4dp"
-                android:layout_marginTop="20dp"
-                android:alpha="0.5"
-                android:background="?attr/colorOnSurface"
-                app:carbon_cornerRadius="2dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/dm_sans_regular"
-            android:gravity="center"
-            android:text="@string/icons"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="16sp" />
+        android:fillViewport="true"
+        android:overScrollMode="never"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="14dp"
-                android:layout_marginRight="14dp"
-                android:ellipsize="end"
-                android:fontFamily="@font/dm_sans_regular"
-                android:letterSpacing="-0.03"
-                android:lines="1"
-                android:maxLines="1"
-                android:text="@string/corner_radius"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="20sp" />
-
-            <com.google.android.material.slider.Slider
-                android:id="@+id/slider"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="0dp"
-                app:labelBehavior="gone" />
+                android:layout_marginBottom="16dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <Space
+                    android:layout_width="30dp"
+                    android:layout_height="0dp" />
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_corner_radius" />
+
+                <Space
+                    android:layout_width="10dp"
+                    android:layout_height="0dp" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="14dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginRight="14dp"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/dm_sans_regular"
+                        android:letterSpacing="-0.03"
+                        android:lines="1"
+                        android:maxLines="1"
+                        android:text="@string/corner_radius"
+                        android:textColor="?attr/colorOnSurface"
+                        android:textSize="20sp" />
+
+                    <com.google.android.material.slider.Slider
+                        android:id="@+id/slider"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="0dp"
+                        app:labelBehavior="gone" />
+
+                </LinearLayout>
+
+                <Space
+                    android:layout_width="16dp"
+                    android:layout_height="0dp" />
+
+            </LinearLayout>
+
+            <com.google.android.material.button.MaterialButtonToggleGroup
+                android:id="@+id/algorithm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                app:selectionRequired="true"
+                app:singleSelection="true">
+
+                <Button
+                    android:id="@+id/regular"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_regular_path"
+                    android:fontFamily="@font/dm_sans_regular"
+                    android:text="@string/regular"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/squircle"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_squircle_path"
+                    android:fontFamily="@font/dm_sans_regular"
+                    android:text="Squircle"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.button.MaterialButtonToggleGroup>
+
+            <carbon.widget.RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="20dp"
+                app:carbon_cornerRadius="30dp"
+                app:carbon_maxHeight="200dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never" />
+
+            </carbon.widget.RelativeLayout>
 
         </LinearLayout>
 
-        <com.google.android.material.button.MaterialButtonToggleGroup
-            android:id="@+id/algorithm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            app:selectionRequired="true"
-            app:singleSelection="true">
+    </androidx.core.widget.NestedScrollView>
 
-            <Button
-                android:id="@+id/regular"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/regular" />
-
-            <Button
-                android:id="@+id/squircle"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Squircle" />
-
-        </com.google.android.material.button.MaterialButtonToggleGroup>
-
-        <com.bosphere.fadingedgelayout.FadingEdgeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:fel_edge="bottom|top"
-            app:fel_size_bottom="20dp"
-            app:fel_size_top="20dp">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:overScrollMode="never"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp" />
-
-        </com.bosphere.fadingedgelayout.FadingEdgeLayout>
-
-    </carbon.widget.LinearLayout>
-
-</RelativeLayout>
+</com.bosphere.fadingedgelayout.FadingEdgeLayout>
