--- a/app/src/main/res/layouts/briefing/layout/articles.xml
+++ b/app/src/main/res/layouts/briefing/layout/articles.xml
@@ -46,7 +46,10 @@
             android:layout_height="wrap_content"
             android:backgroundTint="?attr/colorTertiaryContainer"
             android:fontFamily="@font/dm_sans_regular"
-            android:padding="5dp"
+            android:paddingLeft="15dp"
+            android:paddingTop="5dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="5dp"
             android:text="@string/refresh"
             android:textColor="?attr/colorOnTertiaryContainer"
             android:textSize="16sp" />
