#50 Fix search animation exceptions

--- a/app/src/main/res/layouts/drawer/layout/list_item.xml
+++ b/app/src/main/res/layouts/drawer/layout/list_item.xml
@@ -21,6 +21,10 @@
             android:layout_width="0px"
             android:layout_height="0px"
             android:layout_margin="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:sizeRestricted="true" />
 
         <carbon.widget.ConstraintLayout
@@ -40,9 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"
         android:breakStrategy="balanced"
         android:ellipsize="end"
         android:fontFamily="@font/dm_sans_medium"
