--- a/app/src/main/res/layouts/scroller/layout/fastscroller_track_thumb.xml
+++ b/app/src/main/res/layouts/scroller/layout/fastscroller_track_thumb.xml
@@ -7,7 +7,7 @@
     tools:parentTag="android.widget.RelativeLayout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/trackRight"
+        android:id="@+id/track_right"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
@@ -27,7 +27,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/trackLeft"
+        android:id="@+id/track_left"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
