--- a/app/src/main/res/layouts/briefing/layout/briefing.xml
+++ b/app/src/main/res/layouts/briefing/layout/briefing.xml
@@ -45,7 +45,7 @@
         android:layout_width="500dp"
         android:layout_height="match_parent"
         android:layout_marginBottom="20dp"
-        android:gravity="bottom|center_horizontal"
+        android:gravity="center"
         android:orientation="vertical"
         android:paddingStart="30dp"
         android:paddingEnd="30dp">
@@ -53,24 +53,25 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
+            android:layout_margin="5dp"
             android:fontFamily="@font/dm_sans_regular"
-            android:letterSpacing="-0.03"
-            android:lines="1"
-            android:text="@string/no_feeds"
+            android:text="@string/nothing_here_yet"
             android:textColor="?attr/colorOnSurface"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/add_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:fontFamily="@font/dm_sans_medium"
-            android:letterSpacing="-0.03"
-            android:lines="1"
+            android:backgroundTint="?attr/colorTertiaryContainer"
+            android:fontFamily="@font/dm_sans_regular"
+            android:paddingLeft="15dp"
+            android:paddingTop="5dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="5dp"
             android:text="@string/import_feed"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="30sp" />
+            android:textColor="?attr/colorOnTertiaryContainer"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
