#29 Add individual icon customization

--- a/app/src/main/res/layouts/drawer/layout/list_item.xml
+++ b/app/src/main/res/layouts/drawer/layout/list_item.xml
@@ -24,8 +24,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:sizeRestricted="true" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <carbon.widget.ConstraintLayout
             android:id="@+id/notification_dot"
