--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,5 +2,6 @@
 <resources>
     <declare-styleable name="AdaptiveIconView">
         <attr name="sizeRestricted" format="boolean" />
+        <attr name="looseClipping" format="boolean" />
     </declare-styleable>
 </resources>
