--- a/app/src/main/res/layouts/drawer/layout/folder_item.xml
+++ b/app/src/main/res/layouts/drawer/layout/folder_item.xml
@@ -20,8 +20,7 @@
             android:id="@+id/icon"
             android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:sizeRestricted="true" />
+            android:layout_height="match_parent" />
 
     </FrameLayout>
 
