#29 Add application label customization

--- a/app/src/main/res/briefing_configurator/layout/briefing_configurator.xml
+++ b/app/src/main/res/briefing_configurator/layout/briefing_configurator.xml
@@ -78,7 +78,7 @@
             android:fontFamily="@font/dm_sans_regular"
             android:gravity="center"
             android:hint="@string/link"
-            android:imeOptions="flagNoExtractUi|actionGo"
+            android:imeOptions="actionGo"
             android:lines="1"
             android:maxLines="1"
             android:padding="15dp"
