--- a/app/src/main/res/widgets/layout/widget_picker.xml
+++ b/app/src/main/res/widgets/layout/widget_picker.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/background_sheet">
+    android:layout_height="wrap_content">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroller"
@@ -12,9 +11,9 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/background_sheet"
-        android:clipToPadding="false"
-        android:overScrollMode="never">
+        android:layout_marginBottom="10dp"
+        android:overScrollMode="never"
+        android:background="@drawable/background">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,8 +34,7 @@
 
             <carbon.widget.RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_height="match_parent"
                 app:carbon_cornerRadius="30dp">
 
                 <androidx.recyclerview.widget.RecyclerView
