--- a/app/src/main/res/glance/layout/glance.xml
+++ b/app/src/main/res/glance/layout/glance.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.stario.launcher.ui.glance.GlanceConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.stario.launcher.ui.common.glance.GlanceConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/glance"
     android:layout_width="match_parent"
@@ -21,4 +21,4 @@
 
     </LinearLayout>
 
-</com.stario.launcher.ui.glance.GlanceConstraintLayout>
+</com.stario.launcher.ui.common.glance.GlanceConstraintLayout>
