--- a/app/src/main/res/interactions/layout/popup_window.xml
+++ b/app/src/main/res/interactions/layout/popup_window.xml
@@ -2,6 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="0dp"
     android:layout_height="0dp"
-    android:divider="@drawable/popup_divider"
+    android:divider="@drawable/transparent_divider_medium"
     android:orientation="vertical"
     android:showDividers="middle" />
