--- a/app/src/main/res/launcher/layout/launcher.xml
+++ b/app/src/main/res/launcher/layout/launcher.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.stario.launcher.ui.lock.ClosingAnimationView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.stario.launcher.ui.common.lock.ClosingAnimationView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.stario.launcher.ui.lock.LockDetector
+        <com.stario.launcher.ui.common.lock.LockDetector
             android:id="@+id/detector"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -25,8 +25,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1" />
 
-        </com.stario.launcher.ui.lock.LockDetector>
+        </com.stario.launcher.ui.common.lock.LockDetector>
 
     </com.stario.launcher.sheet.SheetsFocusController>
 
-</com.stario.launcher.ui.lock.ClosingAnimationView>
+</com.stario.launcher.ui.common.lock.ClosingAnimationView>
