--- a/app/src/main/res/media/layout/media.xml
+++ b/app/src/main/res/media/layout/media.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.stario.launcher.ui.glance.GlanceConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.stario.launcher.ui.common.glance.GlanceConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container_media"
     android:layout_width="match_parent"
@@ -101,7 +101,7 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_rewind" />
 
-            <com.stario.launcher.ui.media.SliderComposeView
+            <com.stario.launcher.ui.common.media.SliderComposeView
                 android:id="@+id/slider"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -136,4 +136,4 @@
 
     </LinearLayout>
 
-</com.stario.launcher.ui.glance.GlanceConstraintLayout>
+</com.stario.launcher.ui.common.glance.GlanceConstraintLayout>
