--- a/app/src/main/res/weather/layout/weather.xml
+++ b/app/src/main/res/weather/layout/weather.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.stario.launcher.ui.glance.GlanceConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.stario.launcher.ui.common.glance.GlanceConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container_weather"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -96,7 +96,7 @@
 
                 <TextView
                     android:id="@+id/speed"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/dm_sans_medium"
                     android:gravity="center"
@@ -129,4 +129,4 @@
 
     </LinearLayout>
 
-</com.stario.launcher.ui.glance.GlanceConstraintLayout>
+</com.stario.launcher.ui.common.glance.GlanceConstraintLayout>
