--- a/app/src/main/res/splash/layout/splash_screen.xml
+++ b/app/src/main/res/splash/layout/splash_screen.xml
@@ -8,7 +8,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background" />
+        android:background="@drawable/background_medium_corners" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
