--- a/app/src/main/res/widgets/layout/widget_picker.xml
+++ b/app/src/main/res/widgets/layout/widget_picker.xml
@@ -13,7 +13,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:overScrollMode="never"
-        android:background="@drawable/background">
+        android:background="@drawable/background_medium_corners">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,7 +35,7 @@
             <carbon.widget.RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:carbon_cornerRadius="30dp">
+                app:carbon_cornerRadius="20dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/container_widgets"
