--- a/app/src/main/res/drawer/layout/drawer_folder.xml
+++ b/app/src/main/res/drawer/layout/drawer_folder.xml
@@ -23,7 +23,7 @@
     android:layout_gravity="bottom"
     android:overScrollMode="never">
 
-    <com.stario.launcher.ui.recyclers.ListeningRecyclerView
+    <com.stario.launcher.ui.recyclers.ScrollListeningRecyclerView
         android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
