--- a/app/src/main/res/briefing/layout/articles.xml
+++ b/app/src/main/res/briefing/layout/articles.xml
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.stario.launcher.ui.recyclers.ScrollListeningRecyclerView
+        <com.stario.launcher.ui.recyclers.overscroll.OverScrollRecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
