--- a/app/src/main/res/drawer_interactions/layout/pop_up_customize.xml
+++ b/app/src/main/res/drawer_interactions/layout/pop_up_customize.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2025 Răzvan Albu
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -49,7 +48,7 @@
                     android:src="@drawable/ic_label" />
 
                 <Space
-                    android:layout_width="10dp"
+                    android:layout_width="5dp"
                     android:layout_height="0dp" />
 
                 <TextView
@@ -58,7 +57,7 @@
                     android:layout_marginLeft="14dp"
                     android:layout_marginRight="14dp"
                     android:ellipsize="end"
-                    android:fontFamily="@font/dm_sans_regular"
+                    android:fontFamily="@font/dm_sans_medium"
                     android:letterSpacing="-0.03"
                     android:lines="1"
                     android:maxLines="1"
@@ -69,11 +68,42 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/label_warning"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="10dp"
+                android:gravity="center_vertical"
+                android:visibility="gone">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_warning_label" />
+
+                <Space
+                    android:layout_width="20dp"
+                    android:layout_height="0px" />
+
+                <TextView
+                    android:layout_width="0px"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/dm_sans_regular"
+                    android:text="@string/application_label_warning"
+                    android:textColor="?attr/colorError"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="30dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -93,7 +123,7 @@
                     android:textSize="18sp" />
 
                 <Space
-                    android:layout_width="10dp"
+                    android:layout_width="5dp"
                     android:layout_height="0dp" />
 
 
@@ -109,22 +139,59 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/warning"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:translationY="10dp">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_category" />
+
+                <Space
+                    android:layout_width="5dp"
+                    android:layout_height="0dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginRight="14dp"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/dm_sans_medium"
+                    android:letterSpacing="-0.03"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:text="@string/category"
+                    android:textColor="?attr/colorOnSurface"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/category_warning"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="10dp"
                 android:gravity="center_vertical"
                 android:visibility="gone">
 
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/ic_warning" />
+                    android:src="@drawable/ic_warning_category" />
 
                 <Space
-                    android:layout_width="25dp"
+                    android:layout_width="20dp"
                     android:layout_height="0px" />
 
                 <TextView
@@ -132,11 +199,28 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/dm_sans_regular"
-                    android:text="@string/application_label_warning"
-                    android:textColor="?attr/colorError"
+                    android:text="@string/category_warning"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="18sp" />
 
             </LinearLayout>
+
+            <com.stario.launcher.ui.keyboard.extract.ExtractEditText
+                android:id="@+id/category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="30dp"
+                android:background="@drawable/label_background"
+                android:fontFamily="@font/dm_sans_regular"
+                android:imeOptions="actionGo"
+                android:lines="1"
+                android:maxLines="1"
+                android:padding="15dp"
+                android:singleLine="true"
+                android:textColor="?attr/colorOnPrimaryContainer"
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -155,7 +239,7 @@
                     android:src="@drawable/ic_icons" />
 
                 <Space
-                    android:layout_width="10dp"
+                    android:layout_width="5dp"
                     android:layout_height="0dp" />
 
                 <TextView
@@ -164,7 +248,7 @@
                     android:layout_marginLeft="14dp"
                     android:layout_marginRight="14dp"
                     android:ellipsize="end"
-                    android:fontFamily="@font/dm_sans_regular"
+                    android:fontFamily="@font/dm_sans_medium"
                     android:letterSpacing="-0.03"
                     android:lines="1"
                     android:maxLines="1"
